--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "spotify-web-api-js": "^1.5.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
