--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,6 @@ services:
     image: quay.io/keycloak/keycloak:21.0.1
     command:
       - start-dev
-        
-
-  
+    restart: always
+    volumes:
+      - ./keycloak/data:/opt/keycloak/data
